sonarqube/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: sonarqube
  namespace: sonarqube
spec:
  to:
    kind: Service
    name: sonarqube
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
